@@ -2,6 +2,7 @@
 - Improve duplicate track settings feature
 - Workaround event order issues
 - Better handling when file open in Aria is moved/deleted in the file manager
+- Fix pitch bend playback on windows
 
 1.4.8
 - Fix bug related to instrument changes
